--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 server.port=8080
 
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://ep-royal-tree-ait7dqho-pooler.c-4.us-east-1.aws.neon.tech/neondb?sslmode=require
-spring.datasource.username=neondb_owner
-spring.datasource.password=npg_JOkWKP4ZR6GA
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=.env
+spring.datasource.username=.env
+spring.datasource.password=.env
+spring.datasource.driver-class-name=.env
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
